--- a/index.html
+++ b/index.html
@@ -15,48 +15,368 @@
                 <li><a href="">CONTACT</a></li>
                 <li><a href="">T D B</a></li>
             </ul>
+        </nav>
+    </header>
     
-    <main>
-        <section class="image-grid">
-            <div class="image-item-single"><img src="./assets/img/1.png" alt=""></div>
-            <div class="image-item"><img src="./assets/img/d2.png" alt=""></div>
-            <div class="image-item"><img src="./assets/img/u6.png" alt=""></div>
-            <div class="image-item"><img src="./assets/img/u10.png" alt=""></div>
-            <div class="image-item"><img src="./assets/img/u9.png" alt=""></div>
-            <div class="image-item"><img src="./assets/img/h13.png" alt=""></div>
-            <div class="image-item"><img src="./assets/img/c3.png" alt=""></div>
-            <div class="image-item-single"><img src="./assets/img/d7.png" alt=""></div>
-            <div class="image-item"><img src="./assets/img/c6.png" alt=""></div>
-            <div class="image-item"><img src="./assets/img/h13.png" alt=""></div>
-            <div class="image-item"><img src="./assets/img/h8.png" alt=""></div>
-            <div class="image-item"><img src="./assets/img/h2.png" alt=""></div>
-            <div class="image-item"><img src="./assets/img/d5.png" alt=""></div>
-            <div class="image-item"><img src="./assets/img/c5.png" alt=""></div>
-            <div class="image-item-single"><img src="./assets/img/h6.png" alt=""></div>
-            <div class="image-item"><img src="./assets/img/u7.png" alt=""></div>
-            <div class="image-item"><img src="./assets/img/d4.png" alt=""></div>
-            <div class="image-item"><img src="./assets/img/u11.png" alt=""></div>
-            <div class="image-item"><img src="./assets/img/h9.png" alt=""></div>
-            <div class="image-item"><img src="./assets/img/p2.png" alt=""></div>
-            <div class="image-item"><img src="./assets/img/h4.png" alt=""></div>
-            <div class="image-item-single"><img src="./assets/img/c22.png" alt=""></div>
-            <div class="image-item"><img src="./assets/img/c1.png" alt=""></div>
-            <div class="imaage-item"><img src="./assets/img/u12.png" alt=""></div>
-            <div class="image-item"><img src="./assets/img/p3.png" alt=""></div>
-            <div class="image-item"><img src="./assets/img/life-15.png" alt=""></div>
-            <div class="image-item"><img src="./assets/img/life-17.png" alt=""></div>
-            <div class="image-item"><img src="./assets/img/life-16.png" alt=""></div>
-            <div class="image-item-single"><img src="./assets/img/u8.png" alt=""></div>
-            <div class="image-item"><img src="./assets/img/home-8.png" alt=""></div>
-            <div class="image-item"><img src="./assets/img/home-10.png" alt=""></div>
-            <div class="image-item"><img src="./assets/img/home-9.png" alt=""></div>
+    <main class="main-grid">
 
+        <section class="image-grid">
+
+            <div class="image-item-single">
+                <a href="https://amzn.to/32MmHgL">
+                    <img src="./assets/img/1.png" alt="img">
+                </a>
+                <div class="product-details">
+                    <h3 class="product name">Kanken Art Laptop 15" Special Edition Backpack</h3>
+                    <p class="company">Fjallraven</p>
+                    <p class="price">$119.00</p>
+                </div>
+            </div>
+
+            <div class="image-item">
+                <a href="https://amzn.to/2WX7vtD">
+                    <img src="./assets/img/d2.png" alt="">
+                </a>
+                <div class="product-details">
+                    <h3 class="product name">Swing Arm Wood Desk Lamp</h3>
+                    <p class="company">Tomons</p>
+                    <p class="price">$36.00</p>
+                </div>
+            </div>
+
+            <div class="image-item">
+                <a href="https://amzn.to/2I3WvXM">
+                    <img src="./assets/img/u6.png" alt="">
+                </a>
+                <div class="product-details">
+                    <h3 class="product name">Hajo Backpack</h3>
+                    <p class="company">Ucon Acrobatics</p>
+                    <p class="price">$89.00</p>
+                </div>
+            </div>
+
+            <div class="image-item">
+                <a href="https://amzn.to/2YX3043">
+                    <img src="./assets/img/u10.png" alt="">
+                </a>
+                <div class="product-details">
+                    <h3 class="product name">Zed Bamboo Longboard</h3>
+                    <p class="company">Retrospec</p>
+                    <p class="price">$60.00</p>
+                </div>
+            </div>
+
+            <div class="image-item">
+                <a href="https://amzn.to/2KfP3ee">
+                    <img src="./assets/img/u9.png" alt="">
+                </a>
+                <div class="product-details">
+                    <h3 class="product name">Electric Pour-Over Kettle</h3>
+                    <p class="company">Fellow</p>
+                    <p class="price">$149.00</p>
+                </div>
+            </div>
+
+            <div class="image-item">
+                <a href="https://amzn.to/2FYB3zT">
+                    <img src="./assets/img/h17.png" alt="">
+                </a>
+                <div class="product-details">
+                    <h3 class="product name">Woodie Vintage Car</h3>
+                    <p class="company">Candylab Toys</p>
+                    <p class="price">$35.00</p>
+                </div>
+            </div>
+
+            <div class="image-item">
+                <a href="https://www.amazon.com/b/ref=usbk_surl_books/?node=283155&a_aid=1991">
+                    <img src="./assets/img/c3.png" alt="">
+                </a>
+                <div class="product-details">
+                    <h3 class="product name">Logo Modernism</h3>
+                    <p class="company">Taschen</p>
+                    <p class="price">$60.00</p>
+                </div>
+            </div>
+
+            <div class="image-item-single">
+                <a href="https://amzn.to/2YQLnCV">
+                    <img src="./assets/img/d7.png" alt="">
+                </a>
+                <div class="product-details">
+                    <h3 class="product name">Dieter Rams: As Little Design as Possible</h3>
+                    <p class="company">Sophie Lovell</p>
+                    <p class="price">$150.00</p>
+                </div>
+            </div>
+
+            <div class="image-item">
+                <a href="https://amzn.to/2I3lbQ7">
+                    <img src="./assets/img/c6.png" alt="">
+                </a>
+                <div class="product-details">
+                    <h3 class="product name">The Eye</h3>
+                    <p class="company">Nathan Williams</p>
+                    <p class="price">$28.00</p>
+                </div>
+            </div>
+
+            <div class="image-item">
+                <a href="https://amzn.to/2IifSvA">
+                    <img src="./assets/img/h13.png" alt="">
+                </a>
+                <div class="product-details">
+                    <h3 class="product name">Gather Desk Organizer</h3>
+                    <p class="company">Ugmonk</p>
+                    <p class="price">149.00</p>
+                </div>
+            </div>
+
+            <div class="image-item">
+                <a href="https://amzn.to/2G84CiT">
+                    <img src="./assets/img/life-17.png" alt="">
+                </a>
+                <div class="product-details">
+                    <h3 class="product name">Dipped Canteen</h3>
+                    <p class="company">Corkcicle.</p>
+                    <p class="price">$28.00</p>
+                </div>
+            </div>
+
+            <div class="image-item">
+                <a href="https://amzn.to/2YWPz3N">
+                    <img src="./assets/img/h2.png" alt="">
+                </a>
+                <div class="product-details">
+                    <h3 class="product name">Sayl Office Chair White</h3>
+                    <p class="company">Herman Miller</p>
+                    <p class="price">$599.00</p>
+                </div>
+            </div>
+
+            <div class="image-item">
+                <a href="https://amzn.to/2KhwTsz">
+                    <img src="./assets/img/d5.png" alt="">
+                </a>
+                <div class="product-details">
+                    <h3 class="product name">Three Cheery Wood Notebook</h3>
+                    <p class="company">Field Notes</p>
+                    <p class="price">$13.00</p>
+                </div>
+            </div>
+
+            <div class="image-item">
+                <a href="https://www.bookdepository.com/From-Japan/9780957081659?a_aid=1991">
+                    <img src="./assets/img/c5.png" alt="">
+                </a>
+                <div class="product-details">
+                    <h3 class="product name">From Japan</h3>
+                    <p class="company">Counter Print</p>
+                    <p class="price">$16.00</p>
+                </div>
+            </div>
+
+            <div class="image-item-single">
+                <a href="http://www.grupaproducts.com/arigato/">
+                    <img src="./assets/img/h6.png" alt="">
+                </a>
+                <div class="product-details">
+                    <h3 class="product name">Arigato Desk Lamp</h3>
+                    <p class="company">Grupa</p>
+                    <p class="price">$380.00</p>
+                </div>
+            </div>
+
+            <div class="image-item">
+                <a href="https://amzn.to/2CZiPxO">
+                    <img src="./assets/img/u7.png" alt="">
+                </a>
+                <div class="product-details">
+                    <h3 class="product name">Winston Regal Watch</h3>
+                    <p class="company">Komono</p>
+                    <p class="price">$58.00</p>
+                </div>
+            </div>
+
+            <div class="image-item">
+                <a href="https://heyshop.es/collections/home/products/h-hey">
+                    <img src="./assets/img/d4.png" alt="">
+                </a>
+                <div class="product-details">
+                    <h3 class="product name">Letter H Poster</h3>
+                    <p class="company">Hey Studio</p>
+                    <p class="price">$45.00</p>
+                </div>
+            </div>
+
+            <div class="image-item">
+                <a href="https://amzn.to/2UGLHEQ">
+                    <img src="./assets/img/u11.png" alt="">
+                </a>
+                <div class="product-details">
+                    <h3 class="product name">Coffe Can</h3>
+                    <p class="company">Blue Bottle Company</p>
+                    <p class="price">$11.00</p>
+                </div>
+            </div>
+
+            <div class="image-item">
+                <a href="https://amzn.to/2UFjEWp">
+                    <img src="./assets/img/h9.png" alt="">
+                </a>
+                <div class="product-details">
+                    <h3 class="product name">Beoplay H4</h3>
+                    <p class="company">Bang & Olufsen</p>
+                    <p class="price">$160.00</p>
+                </div>
+            </div>
+
+            <div class="image-item">
+                <a href="https://amzn.to/2OTHEQg">
+                    <img src="./assets/img/p2.png" alt="">
+                </a>
+                <div class="product-details">
+                    <h3 class="product name">Make It Now</h3>
+                    <p class="company">Anthony Burrill</p>
+                    <p class="price">$22.00</p>
+                </div>
+            </div>
+
+            <div class="image-item">
+                <a href="https://amzn.to/2UFHfGt">
+                    <img src="./assets/img/h4.png" alt="">
+                </a>
+                <div class="product-details">
+                    <h3 class="product name">Black Side Chair</h3>
+                    <p class="company">Eames Style</p>
+                    <p class="price">$54.00</p>
+                </div>
+            </div>
+
+            <div class="image-item-single">
+                <a href="https://amzn.to/2Ij1IKA">
+                    <img src="./assets/img/c22.png" alt="">
+                </a>
+                <div class="product-details">
+                    <h3 class="product name">Min: The New Simplicity in Graphic Design</h3>
+                    <p class="company">Thames & Hudson</p>
+                    <p class="price">$28.00</p>
+                </div>
+            </div>
+
+            <div class="image-item">
+                <a href="https://amzn.to/2UxtLww">
+                    <img src="./assets/img/c1.png" alt="">
+                </a>
+                <div class="product-details">
+                    <h3 class="product name">Grid systems in graphic design</h3>
+                    <p class="company">Josef Müller-Brockmann</p>
+                    <p class="price">$42.00</p>
+                </div>
+            </div>
+
+            <div class="image-item">
+                <a href="https://amzn.to/2I5vxiq">
+                    <img src="./assets/img/u12.png" alt="">
+                </a>
+                <div class="product-details">
+                    <h3 class="product name">Card Wallet</h3>
+                    <p class="company">Herschel</p>
+                    <p class="price">$15.00</p>
+                </div>
+            </div>
+
+            <div class="image-item">
+                <a href="https://goodfuckingdesignadvice.com/products/classic-advice-print">
+                    <img src="./assets/img/p3.png" alt="">
+                </a>
+                <div class="product-details">
+                    <h3 class="product name">Classic Advice Print Black</h3>
+                    <p class="company">Good Fucking Design Advise </p>
+                    <p class="price">$30.00</p>
+                </div>
+            </div>
+
+            <div class="image-item">
+                <a href="https://amzn.to/2D3yZWX">
+                    <img src="./assets/img/life-15.png" alt="">
+                </a>
+                <div class="product-details">
+                    <h3 class="product name">Magic Mouse</h3>
+                    <p class="company">Alle</p>
+                    <p class="price">$92.00</p>
+                </div>
+            </div>
+
+            <div class="image-item">
+                <a href="https://amzn.to/2WTbsPL">
+                    <img src="./assets/img/life-17.png" alt="">
+                </a>
+                <div class="product-details">
+                    <h3 class="product name">Travel Tumbler</h3>
+                    <p class="company">Kinto</p>
+                    <p class="price">$34.00</p>
+                </div>
+            </div>
+
+            <div class="image-item">
+                <a href="https://amzn.to/2GbCf4A">
+                    <img src="./assets/img/life-16.png" alt="">
+                </a>
+                <div class="product-details">
+                    <h3 class="product name">Magic Keyboard</h3>
+                    <p class="company">Apple</p>
+                    <p class="price">$139.00</p>
+                </div>
+            </div>
+
+            <div class="image-item">
+                <a href="https://amzn.to/2WMJbdy">
+                    <img src="./assets/img/u8.png" alt="">
+                </a>
+                <div class="product-details">
+                    <h3 class="product name">Bottle Grinder</h3>
+                    <p class="company">Menu</p>
+                    <p class="price">$75.00</p>
+                </div>
+            </div>
+
+            <div class="image-item">
+                <a href="https://amzn.to/2JLtxvk">
+                    <img src="./assets/img/home-8.png" alt="">
+                </a>
+                <div class="product-details">
+                    <h3 class="product name">Geo Thermos</h3>
+                    <p class="company">Normann Copenhagen</p>
+                    <p class="price">$62.00</p>
+                </div>
+            </div>
+
+            <div class="image-item">
+                <a href="https://amzn.to/2YdSBPy">
+                    <img src="./assets/img/home-10.png" alt="">
+                </a>
+                <div class="product-details">
+                    <h3 class="product name">Womb Chair & Ottoman</h3>
+                    <p class="company">Kardiel</p>
+                    <p class="price">$799.00</p>
+                </div>
+            </div>
+
+            <div class="image-item">
+                <a href="https://amzn.to/2LCEfGP">
+                    <img src="./assets/img/h9.png" alt="">
+                </a>
+                <div class="product-details">
+                    <h3 class="product name">Water Filter Glass Carafe</h3>
+                    <p class="company">Soma</p>
+                    <p class="price">$30.00</p>
+                </div>
+            </div>
 
         </section>
 
     </main>
-        </nav>
-    </header>
     
 </body>
 </html>
