--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>Design_Shop</title>
 </head>
 <body>
-    <header>
+    <header class="flex">
         <div class="logo">The Design Shop</div>
         <nav class="navright">
             <ul>
-                <li><a href="">WEEKLY RECOMMENDATIONS</a></li>
+                <li><a href="">weekly RECOMMENDATIONS</a></li>
                 <li><a href="">CONTACT</a></li>
                 <li><a href="">T D B</a></li>
             </ul>
@@ -330,7 +330,7 @@
                 </div>
             </div>
 
-            <div class="image-item">
+            <div class="image-item-single">
                 <a href="https://amzn.to/2WMJbdy">
                     <img src="./assets/img/u8.png" alt="">
                 </a>
