--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
 </head>
 <body>
     <header class="flex">
-        <div class="logo">The Design Shop</div>
-        <nav class="navright">
-            <ul>
-                <li><a href="">weekly RECOMMENDATIONS</a></li>
-                <li><a href="">CONTACT</a></li>
-                <li><a href="">T D B</a></li>
-            </ul>
-        </nav>
+        <div><h1>The Design Shop</h1></div>
+        <div class="navright">
+            <a href=""><p>weekly recoomendations</p></a>
+            <a href=""><p>contact</p></a>
+            <a href=""><p>t d b</p></a>
+            
+        </div>
     </header>
     
     <main class="main-grid">
